# w3c-crosswalk

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-bake.hcl  fixes.md  package.json  pyproject.toml
.agents/: PROJECT_LEARNINGS.md
.agents/learnings/: PROJECT_LEARNINGS_SIGNING_AND_ISSUANCE.md
.github/workflows/: ci.yml  package-release.yml
adrs/: 001-use-urn-said-for-jsonld-ids.md  002-use-publickeymultibase-for-data-integrity-verification.md  003-use-pinned-local-jsonld-contexts-for-isomer-node-verification.md  004-create-webs-did-resolver-package.md
apps/isomer-dashboard/: Dockerfile  Makefile  README.md  package-lock.json  package.json
apps/isomer-dashboard/src/: main.ts  server.test.ts  server.ts  store.ts
apps/isomer-go/: Makefile  README.md  go.mod  go.sum
apps/isomer-node/: Dockerfile  Makefile  README.md  package-lock.json  package.json  tsconfig.json
apps/isomer-node/src/: base58.ts  data-integrity.ts  did-jwt-vc.ts  did-resolver.test.ts  did-resolver.ts  effection.ts  jwt.ts  local-contexts.test.ts  local-contexts.ts  main.ts  (+10 more)
apps/isomer_cli/: README.md
apps/status_service/: README.md
docker/: README.md  compose.build.yml  compose.local.yml  compose.verifiers.yml
docker/isomer-go/: Dockerfile
docker/isomer-node/: Dockerfile
docker/isomer-python/: Dockerfile
docker/keria/: local-witness-oobis.json
docker/witness/: check-witness-oobis.py
docs/: cli-e2e-walkthrough.md  credential-status-evaluation.md  integration-maintainer-guide.md  isomer-profile.md  live-service-headless-e2e.md  verifier-contract.md  w3c-vc-libs-options.md
fixtures/: README.md  vrd-acdc.cesr  vrd-acdc.json  vrd-auth-acdc.cesr  vrd-auth-acdc.json
interop/: README.md  openid4vci-credential-configuration.json  openid4vp-presentation-definition.json
plans/: isomer-go-vp-vc-go-jsonld-fix.md  isomer-w3c-sidecars.md  verifier-initiated-openid4vp-cli-parity.md  w3c-vrd-isomer-plan.md
scripts/demo/: README.md  bootstrap-vrd-acdc-kli.sh  serve-didwebs-static.sh
scripts/docker/: smoke-verifier-containers.py
scripts/local-stack/: project_vrd_to_verifiers.py
src/vc_isomer/: __init__.py  common.py  constants.py  controller.py  data_integrity.py  didwebs.py  isomer_runtime.py  jwt.py  keri_projection.py  longrunning.py  profile.py  runtime_http.py  service.py  services.py  signing.py  status.py  verifier.py  verifier_client.py  verifier_logging.py  verifier_runtime.py  webhook.py
src/w3c_crosswalk/: __init__.py  cli.py  common.py  constants.py  controller.py  didwebs.py  jwt.py  keri_projection.py  longrunning.py  profile.py  runtime_http.py  service.py  services.py  signing.py  status.py  verifier.py  verifier_client.py  verifier_runtime.py
tests/: conftest.py  keri_test_support.py  test_cesr_fixtures.py  test_cli.py  test_data_integrity.py  test_didwebs.py  test_integration_helpers.py  test_interop_artifacts.py  test_isomer_runtime.py  test_jwt.py  test_keri_projection.py  test_longrunning.py  test_profile.py  test_runtime_http.py  test_service.py  test_signifypy_did_webs.py  test_signifypy_w3c.py  test_status.py  test_verifier.py  test_verifier_runtime.py  test_webhook.py
tests/headless_w3c_e2e/: test_docker_stack.py  test_headless_package.py  test_live_service_headless_e2e.py  test_process_stack.py  test_runtime_config.py  test_seed_witness_oobis.py  test_service_verifiers.py  test_wallet_didwebs.py
tests/integration/: __init__.py  conftest.py  constants.py  external_verifiers.py  helpers.py  kli_flow.py  test_single_sig_vrd_crosswalk.py  test_single_sig_vrd_isomer.py  topology.py
(+98 files in other folders)
