[project]
name = "w3c-crosswalk"
version = "0.1.0"
description = "W3C crosswalk services and tooling for vLEI VRD credentials"
readme = "README.md"
requires-python = ">=3.12.2,<3.14.3"
license = { text = "Apache-2.0" }
authors = [
    { name = "Kent Bull", email = "kent@kentbull.com" }
]
keywords = ["keri", "vlei", "acdc", "w3c", "vc-jwt", "did:webs"]
dependencies = [
    "keri>=1.2.12,<1.3",
]

[dependency-groups]
dev = [
    "falcon>=4.0.2",
    "hio>=0.6.14,<0.7",
    "pytest>=8.4,<9",
]
test = [
    "falcon>=4.0.2",
    "hio>=0.6.14,<0.7",
    "pytest>=8.4,<9",
]

[project.scripts]
crosswalk = "w3c_crosswalk.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/w3c_crosswalk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
