[project]
name = "w3c-crosswalk"
version = "0.1.0"
description = "W3C crosswalk services and tooling for vLEI VRD credentials"
readme = "README.md"
requires-python = ">=3.12.6,<3.14"
license = { text = "Apache-2.0" }
authors = [
    { name = "Kent Bull", email = "kent@kentbull.com" }
]
keywords = ["keri", "vlei", "acdc", "w3c", "vc-jwt", "did:webs"]
dependencies = [
    "falcon>=4.0.2",
    "hio==0.6.14",
    "keri>=1.2.13,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.4,<9",
]
test = [
    "mockito>=1.5,<2",
    "pytest>=8.4,<9",
]
live = [
    "did-webs-resolver>=0.3.5,<0.4",
    "vlei>=1.0.2,<2",
]

[project.scripts]
crosswalk = "w3c_crosswalk.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev", "test", "live"]

[tool.uv.sources]
keri = { git = "https://github.com/WebOfTrust/keripy.git", rev = "cbbf700fa8091587b96b5475c5f50d1d8bf3ca40" }
"did-webs-resolver" = { git = "https://github.com/GLEIF-IT/did-webs-resolver.git", rev = "be1679f5629ca4a145db456cc79219d837ae3d2c" }
vlei = { git = "https://github.com/WebOfTrust/vLEI.git", rev = "f514b9431c5f965b5f7f64a8693e19df2f181564" }

[tool.hatch.build.targets.wheel]
packages = ["src/w3c_crosswalk"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
