[project]
name = "vc-isomer"
version = "0.1.0"
description = "W3C isomer services and tooling for vLEI VRD credentials"
readme = "README.md"
requires-python = ">=3.12.6,<3.14"
license = { text = "Apache-2.0" }
authors = [
    { name = "Kent Bull", email = "kent@kentbull.com" }
]
keywords = ["keri", "vlei", "acdc", "w3c", "vc-jwt", "did:webs"]
dependencies = [
    "falcon>=4.0.2",
    "hio==0.6.14",
    "keri>=1.2.13,<2",
    "PyLD>=2.0.4,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.4,<9",
]
test = [
    "jsonschema>=4.0,<5",
    "mockito>=1.5,<2",
    "pytest>=8.4,<9",
]
live = [
    "signifypy>=0.4.2,<0.5.0",
    "vlei>=1.0.2,<2",
]

[project.scripts]
isomer = "vc_isomer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev", "test", "live"]

[tool.uv.sources]
vlei = { git = "https://github.com/WebOfTrust/vLEI.git", rev = "f514b9431c5f965b5f7f64a8693e19df2f181564" }

[tool.hatch.build.targets.wheel]
packages = ["src/vc_isomer"]

[tool.pytest.ini_options]
pythonpath = [".", "packages/headless-w3c-e2e/src", "packages/signifypy-w3c/src", "packages/signifypy-did-webs/src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
